--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         margin-bottom: 5px;
         outline: none;
       }
-      #recaptcha {
+      #recaptcha-container {
         margin-bottom: 5px;
       }
       #send,
