--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           value="Verify"
           onclick="codeverify()"
         />
-        <div class="p-conf">Number Verifyed</div>
-        <div class="n-conf">OTP ERRORE</div>
+        <div class="p-conf" style="display: none">Number Verifyed</div>
+        <div class="n-conf" style="display: none">OTP ERRORE</div>
       </div>
     </div>
 
