--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
-    <script src="otp.js"></script>
+    <script src="java.js"></script>
   </body>
 </html>
